src/objects/WikiPage__c.object
<CustomObject>
    <fields>
        <fullName>FirstPublishedDate__c</fullName>
        <label>First Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPublishedDate__c</fullName>
        <label>Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalPageVersion__c</fullName>
        <label>Total Page Version</label>
        <summaryForeignKey>WikiPageVersion__c.WikiPage__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WikiSpace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wiki Space</label>
        <referenceTo>WikiSpace__c</referenceTo>
        <relationshipLabel>Wiki Pages</relationshipLabel>
        <relationshipName>WikiPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Page</label>
    <nameField>
        <displayFormat>P {0000}</displayFormat>
        <label>Page Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wiki Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>